# CrabeDB

./: .dockerignore  Cargo.toml  README.md  build.rs
docker/: README.md  client.Dockerfile  server.Dockerfile
proto/: kvstore.proto
src/crabedb/observability/: README.md
src/crabedb/storage/: chunk_queue.rs  crabe_db.rs  error.rs  lsm.rs  mod.rs  options.rs  slot.rs  util.rs  xxhash.rs
